# AlgoEng

./: .gitignore  CMakeLists.txt  README.md  test_p3.ppm  test_p6.ppm
BrunoExamAsignments/: ExamAssigmentsBrunoReinhold.docx
BrunoExamAsignments/CodingWarmUp2/: min_solution.cpp  pi_parallel_rc.cpp
BrunoExamAsignments/CodingWarmUp3/: mandelbrot.cpp  parallel_Pi.cpp
BrunoExamAsignments/CodingWarmUp4/: fast_merge_sort.cpp  main_merge_dac.cpp
answers/: fast_merge_sort.cpp  times.txt
answers/aron_gaden/: main_merge_sort.cpp
answers/aron_gaden/lec2/: CMakeLists.txt  image_denoise.cpp  min_solution.cpp  pi_parallel_rc.cpp
answers/aron_gaden/lec3/: CMakeLists.txt  mandelbrot.cpp  parallel_pi_1_loc.cpp  parallel_pi_cpp11.cpp
answers/aron_gaden/lec4/: CMakeLists.txt  fast_merge_sort.h
answers/bruno_reinhold/CodingWarmUp2/: image_denoise.cpp
answers/bruno_reinhold/CodingWarmUp4/: fast_merge_sort.h
project/: CMakeLists.txt  Matrix2D.cpp  Matrix2D.h  aligned_allocator.h  convolution.cpp  convolution.h  filter.cpp  filter.h  install.sh  main.cpp  matrix_utils.cpp  matrix_utils.h  ndarray.h  ppm.cpp  ppm.h  read_ppm.cpp  read_ppm.h  tests.cpp
project/answers/: CMakeLists.txt  fast_merge_sort.cpp  fast_merge_sort.h  main.cpp  mt_merging_parallel.cpp  mt_merging_parallel.h  times.txt
project/playground/: Untitled.ipynb
