cmake_minimum_required(VERSION 3.21)
project(answers)
project(lec4)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Ofast -march=native")
find_package(OpenMP REQUIRED)
#add_executable(answers main.cpp)
add_executable(lec4 main.cpp fast_merge_sort.cpp fast_merge_sort.h mt_merging_parallel.cpp mt_merging_parallel.h)

if(OpenMP_CXX_FOUND)
    target_link_libraries(lec4 PUBLIC OpenMP::OpenMP_CXX)
    #target_link_libraries(answers PUBLIC OpenMP::OpenMP_CXX)
endif()
